--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.11.4-2) UNRELEASED; urgency=low
+
+  * xvfb-run: kill Xvfb when the script dies.
+
+ -- Julien Cristau <jcristau@debian.org>  Mon, 19 Mar 2012 21:16:07 +0100
+
 xorg-server (2:1.11.4-1) unstable; urgency=low
 
   * New upstream release.
