Speed up xvfb-run
Instead of waiting 3 seconds and hoping that's enough for Xvfb to come
up (and waiting 2.9 seconds too many in the general case), tell it to
send us SIGUSR1 when it's ready to accept connections.  This reduces
"xvfb-run -- xterm -e true" from 3.17s to 0.28s on a quick test.

--- a/debian/local/xvfb-run.1
+++ b/debian/local/xvfb-run.1
@@ -157,12 +157,7 @@ to achieve the latter function.
 The default is \(oq\-screen 0 640x480x8\(cq.
 .TP
 .BI \-w\  delay \fR,\fB\ \-\-wait= delay
-Wait
-.I delay
-seconds after launching
-.B Xvfb
-before attempting to start the specified command.
-The default is 3.
+Ignored for compatibility with earlier versions.
 .SH ENVIRONMENT
 .TP
 .B COLUMNS
