--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xorg-server (2:1.11.4-0ubuntu10.4) UNRELEASED; urgency=low
+
+  * Add 516-dix-dont-emulate-scroll-events-for-non-existing-axes.patch
+    from upstream 1.12.2. Fixes the server from entering in an infinite
+    loop in certain situations. (LP: #921236)
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 05 Jul 2012 22:50:45 +0300
+
 xorg-server (2:1.11.4-0ubuntu10.3) precise-proposed; urgency=low
 
   [ Maarten Lankhorst ]
