--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xorg-server (2:1.11.4-0ubuntu10.7) precise-proposed; urgency=low
+
+  * Re-enable 516-dix-dont-emulate-scroll-events-for-non-existing-axes.patch
+    from upstream 1.12.2. Fixes the server from entering in an infinite
+    loop in certain situations. (LP: #921236)
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 02 Aug 2012 17:14:39 +0300
+
 xorg-server (2:1.11.4-0ubuntu10.6) precise-proposed; urgency=low
 
   * Revert changes from 10.2 and 10.3 (and the unreleased SRU 10.4).  10.2
