--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xorg-server (2:1.11.4-0ubuntu10.9) UNRELEASED; urgency=low
+
+  * add 233-xf86events-valgrind.patch to fix a xserver corruption
+    when acpid is stopped before Xorg is. (LP: #1070481)
+  * add 235-composite-tracking.diff to fix exa corruption. (LP: #1010794)
+
+ -- Maarten Lankhorst <maarten.lankhorst@canonical.com>  Thu, 25 Oct 2012 13:41:16 +0200
+
 xorg-server (2:1.11.4-0ubuntu10.8) precise-proposed; urgency=low
 
   * Add upstream patches to avoid seg fault in case the user is running with
