Revert the change to 500_pointer_barrier_thresholds.diff, causes issues with unity launcher.
Conflicts:
	debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xorg-server (2:1.13.0-0ubuntu6.2) UNRELEASED; urgency=low
+
+  * Revert the change to 500_pointer_barrier_thresholds.diff, causes
+    issues with unity launcher.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 22 Nov 2012 17:29:36 +0200
+
 xorg-server (2:1.13.0-0ubuntu6.1) quantal-proposed; urgency=low
 
   [ Maarten Lankhorst ]
@@ -13,7 +20,7 @@ xorg-server (2:1.13.0-0ubuntu6.1) quantal-proposed; urgency=low
     jumping with absolute pointing device.  Initializes device
     transformation matrix to an identity matrix.  Thanks to a7x.
     (LP: #1041063)
-  
+
   [ Tim Lunn ]
   * 500_pointer_barrier_thresholds.diff: Update to fix gaps above
     barriers at edge of screen (LP: #1073724)
