--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xorg-server (2:1.13.0-0ubuntu7) UNRELEASED; urgency=low
+
+  * Add 233_dix_save_touchpoint_coords_before_transform.patch: Patch
+    proposed to xorg-devel@ to fix issue where when a transformation
+    matrix is applied on input, it gets applied multiple times.
+    (LP: #1076627)
+
+ -- Bryce Harrington <bryce@canonical.com>  Wed, 21 Nov 2012 19:29:41 +0000
+
 xorg-server (2:1.13.0-0ubuntu6) quantal; urgency=low
 
   [ Timo Aaltonen ]
