--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.13.0-0ubuntu6.2) quantal-proposed; urgency=low
+xorg-server (2:1.13.0-0ubuntu6.2) UNRELEASED; urgency=low
 
   * add patch to fix starting xorg-server with no outputs connected (LP: #1122072)
     - fixup-headless.patch
