--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ xorg-server (2:1.13.0-0ubuntu6.2) UNRELEASED; urgency=low
     when using cursor movement when using "Coordinate Transformation Matrix".
     (LP: #1212123)
 
+  [ Timo Aaltonen ]
+  * Fix patch 500 to apply.
+
  -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Tue, 12 Feb 2013 15:18:32 +0100
 
 xorg-server (2:1.13.0-0ubuntu6.1) quantal-proposed; urgency=low
