--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xorg-server (2:1.14.5-1ubuntu2~saucy2) UNRELEASED; urgency=medium
+
+  * Disable support for rotations and transforms
+    on gpu screens for now. (LP: #1308515)
+  * Only set RR caps that are appropriate to main/gpu screen. (LP: #1277014)
+  * Fix crash in RRCrtcDetachScanoutPixmap. (LP: #1280743)
+
+ -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Wed, 16 Apr 2014 10:14:39 +0200
+
 xorg-server (2:1.14.5-1ubuntu2~saucy1) saucy-proposed; urgency=low
 
   * Copy package back to saucy-proposed from trusty.
