--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
-xorg-server (2:1.15.1-0ubuntu2.2) UNRELEASED; urgency=low
+xorg-server (2:1.15.1-0ubuntu2.2) UNRELEASED; urgency=medium
 
   [ Laércio de Sousa ]
   * Backport support for logind-based multiseat back to trusty. (LP: #1209008)
+
+  [ Maarten Lankhorst ]
+  * Re-enable support for rotation and transforms on gpu-screens with support.
+    - Allows re-enabling intel SNA rotation after fixing it. (LP: #1386620)
+  * Fix black screen when using qemu with cirrus vga. (LP: #1386620)
 
  -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Tue, 30 Sep 2014 12:46:12 +0200
 
