--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.15.1-0ubuntu2.2) UNRELEASED; urgency=medium
+xorg-server (2:1.15.1-0ubuntu2.2) trusty-proposed; urgency=medium
 
   [ Laércio de Sousa ]
   * Backport support for logind-based multiseat back to trusty. (LP: #1209008)
@@ -8,7 +8,7 @@ xorg-server (2:1.15.1-0ubuntu2.2) UNRELEASED; urgency=medium
     - Allows re-enabling intel SNA rotation after fixing it. (LP: #1386620)
   * Fix black screen when using qemu with cirrus vga. (LP: #1386620)
 
- -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Tue, 30 Sep 2014 12:46:12 +0200
+ -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 03 Nov 2014 12:36:32 +0100
 
 xorg-server (2:1.15.1-0ubuntu2.1) trusty-proposed; urgency=medium
 
